--- a/style/sass/main.scss
+++ b/style/sass/main.scss
@@ -1,3 +1,5 @@
 @import "partials/palette";
 @import "partials/typography";
 @import "partials/default";
+@import "partials/blocks/header";
+@import "partials/components/score";
