--- a/style/sass/partials/_default.scss
+++ b/style/sass/partials/_default.scss
@@ -1,3 +1,12 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   background-color: $black;
+  font-family: "Lato", sans-serif;
+  color: $white;
+  font-size: 15px;
+  font-weight: 400;
 }
