--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,41 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
-  background-color: #000;
+  background-color: #222;
+  font-family: "Lato", sans-serif;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.header {
+  padding: 25px 0 5px 0;
+}
+.header .header__container {
+  max-width: 1110px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header .header__logo {
+  display: block;
+  cursor: pointer;
+}
+.header .header__logo:focus {
+  outline: none;
+}
+.header .header__logo .header__logo-img {
+  width: 200px;
+  height: 55px;
+}
+
+.score .score__text {
+  font-size: 18.75px;
+  font-weight: 500;
 }
 
 /*# sourceMappingURL=style.css.map */
