feat: add play field with rounds block and random bird block

--- a/style/sass/main.scss
+++ b/style/sass/main.scss
@@ -3,3 +3,9 @@
 @import "partials/default";
 @import "partials/blocks/header";
 @import "partials/components/score";
+@import "partials/blocks/game-field";
+@import "partials/components/rounds-list";
+@import "partials/components/random-bird";
+@import "partials/components/player";
+@import "partials/components/play-icon";
+@import "partials/components/pause-icon";
