--- a/style/sass/partials/components/_random-bird.scss
+++ b/style/sass/partials/components/_random-bird.scss
@@ -36,7 +36,23 @@
   content: "";
   display: block;
   width: 100%;
-  height: 1px;
+  height: 0.5px;
   background-color: $gray;
   margin-top: 8px;
+}
+
+@media (max-width: 570px) {
+  .random-bird {
+    flex-direction: column;
+
+    .random-bird__bird-info {
+      width: 100%;
+      padding: 0;
+      margin-top: 15px;
+
+      .random-bird__title {
+        text-align: center;
+      }
+    }
+  }
 }
