--- a/style/style.css
+++ b/style/style.css
@@ -55,11 +55,24 @@ body {
 .game-field .game-field__container .game-field__rounds {
   margin-bottom: 25px;
 }
+.game-field .game-field__container .game-field__random-bird {
+  margin-bottom: 25px;
+}
 
 @media (max-width: 1200px) {
   .game-field .game-field__container {
     max-width: 960px;
     padding: 0 15px;
+  }
+}
+@media (max-width: 990px) {
+  .game-field .game-field__container {
+    max-width: 720px;
+  }
+}
+@media (max-width: 759px) {
+  .game-field .game-field__container {
+    max-width: 540px;
   }
 }
 .rounds-list {
@@ -86,6 +99,11 @@ body {
   background-color: #00bc8c;
 }
 
+@media (max-width: 990px) {
+  .rounds-list .rounds-list__item {
+    padding: 8px 12px;
+  }
+}
 .random-bird {
   display: flex;
   align-items: center;
@@ -118,14 +136,27 @@ body {
   content: "";
   display: block;
   width: 100%;
-  height: 1px;
+  height: 0.5px;
   background-color: #999;
   margin-top: 8px;
 }
 
+@media (max-width: 570px) {
+  .random-bird {
+    flex-direction: column;
+  }
+  .random-bird .random-bird__bird-info {
+    width: 100%;
+    padding: 0;
+    margin-top: 15px;
+  }
+  .random-bird .random-bird__bird-info .random-bird__title {
+    text-align: center;
+  }
+}
 .player {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   padding: 4px;
 }
@@ -138,6 +169,31 @@ body {
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  margin-right: 20px;
+}
+.player .player__timebar {
+  position: relative;
+  flex: auto;
+}
+.player .player__timebar .player__timebar-bar {
+  height: 4px;
+  background-color: #999;
+}
+.player .player__timebar .player__timebar-bar .player__timebar-circle {
+  position: absolute;
+  top: -6px;
+  left: 0%;
+  width: 16px;
+  height: 16px;
+  background-color: #999;
+  border-radius: 50%;
+}
+.player .player__timebar .player__time-info {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 12px;
+  font-size: 11px;
+  color: #999;
 }
 
 .play-icon {
