--- a/style/sass/partials/components/_player.scss
+++ b/style/sass/partials/components/_player.scss
@@ -14,6 +14,7 @@
     align-items: center;
     cursor: pointer;
     margin-right: 20px;
+    margin-bottom: 20px;
   }
 
   .player__timebar {
@@ -32,6 +33,7 @@
         height: 16px;
         background-color: $gray;
         border-radius: 50%;
+        cursor: pointer;
       }
     }
 
@@ -41,6 +43,7 @@
       margin-top: 12px;
       font-size: 11px;
       color: $gray;
+      cursor: pointer;
     }
   }
 }
