feat: adaptive for 990px and 759px

--- a/style/sass/partials/blocks/_header.scss
+++ b/style/sass/partials/blocks/_header.scss
@@ -33,3 +33,19 @@
     }
   }
 }
+
+@media (max-width: 990px) {
+  .header {
+    .header__container {
+      max-width: 720px;
+    }
+  }
+}
+
+@media (max-width: 759px) {
+  .header {
+    .header__container {
+      max-width: 540px;
+    }
+  }
+}
