--- a/style/sass/partials/blocks/_game-field.scss
+++ b/style/sass/partials/blocks/_game-field.scss
@@ -37,7 +37,6 @@
       text-align: center;
       padding: 6px 12px;
       border-radius: 5px;
-      background-color: $green-light;
       cursor: pointer;
     }
   }
@@ -65,6 +64,15 @@
   .game-field {
     .game-field__container {
       max-width: 540px;
+
+      .game-field__game-wrapper {
+        flex-direction: column;
+
+        .game-field__variants {
+          margin-right: 0;
+          margin-bottom: 25px;
+        }
+      }
     }
   }
 }
