--- a/style/style.css
+++ b/style/style.css
@@ -41,6 +41,16 @@ body {
     padding-right: 15px;
   }
 }
+@media (max-width: 990px) {
+  .header .header__container {
+    max-width: 720px;
+  }
+}
+@media (max-width: 759px) {
+  .header .header__container {
+    max-width: 540px;
+  }
+}
 .score .score__text {
   font-size: 18.75px;
   font-weight: 500;
@@ -79,7 +89,6 @@ body {
   text-align: center;
   padding: 6px 12px;
   border-radius: 5px;
-  background-color: #00bc8c;
   cursor: pointer;
 }
 
@@ -97,6 +106,13 @@ body {
 @media (max-width: 759px) {
   .game-field .game-field__container {
     max-width: 540px;
+  }
+  .game-field .game-field__container .game-field__game-wrapper {
+    flex-direction: column;
+  }
+  .game-field .game-field__container .game-field__game-wrapper .game-field__variants {
+    margin-right: 0;
+    margin-bottom: 25px;
   }
 }
 .rounds-list {
@@ -181,20 +197,28 @@ body {
   display: block;
   width: 100%;
   height: 0.5px;
-  background-color: #999;
+  background-color: #555;
   margin-top: 8px;
 }
 
-@media (max-width: 570px) {
-  .random-bird {
+@media (max-width: 990px) {
+  .game-field__chosen-bird-info .random-bird__header {
     flex-direction: column;
   }
-  .random-bird .random-bird__bird-info {
+  .game-field__chosen-bird-info .random-bird__header .random-bird__bird-info {
+    width: 100%;
+  }
+}
+@media (max-width: 570px) {
+  .random-bird__header {
+    flex-direction: column;
+  }
+  .random-bird__header .random-bird__bird-info {
     width: 100%;
     padding: 0;
     margin-top: 15px;
   }
-  .random-bird .random-bird__bird-info .random-bird__title {
+  .random-bird__header .random-bird__bird-info .random-bird__title {
     text-align: center;
   }
 }
@@ -269,13 +293,23 @@ body {
   background-color: #00bc8c;
 }
 
+.next-active {
+  background-color: #00bc8c;
+}
+
+.next-inactive {
+  background-color: #303030;
+  border: 0.5px #555 solid;
+}
+
 .variants-list {
   list-style: none;
-  border: 0.5px #999 solid;
+  border: 0.5px #555 solid;
+  height: 100%;
 }
 .variants-list .variants-list__variant {
   padding: 14px 20px;
-  border-bottom: 0.5px #999 solid;
+  border-bottom: 0.5px #555 solid;
   display: flex;
   align-items: center;
   cursor: pointer;
