feat: add player function

--- a/style/sass/partials/blocks/_game-field.scss
+++ b/style/sass/partials/blocks/_game-field.scss
@@ -33,7 +33,7 @@
     }
 
     .game-field__next-btn {
-      margin: 25px 15px;
+      margin: 25px 0;
       text-align: center;
       padding: 6px 12px;
       border-radius: 5px;
