--- a/style/sass/partials/stages/_game-stages.scss
+++ b/style/sass/partials/stages/_game-stages.scss
@@ -1,13 +1,13 @@
 //Плеер
 
-.play {
+.play-icon {
   width: 18px;
   height: 18px;
   background: url("../../../../src/icons/play-icon.png") no-repeat center;
   background-size: contain;
 }
 
-.pause {
+.pause-icon {
   width: 18px;
   height: 18px;
   background: url("../../../../src/icons/pause-icon.png") no-repeat center;
