--- a/style/style.css
+++ b/style/style.css
@@ -85,7 +85,7 @@ body {
   flex: 50%;
 }
 .game-field .game-field__container .game-field__next-btn {
-  margin: 25px 15px;
+  margin: 25px 0;
   text-align: center;
   padding: 6px 12px;
   border-radius: 5px;
@@ -267,14 +267,14 @@ body {
   cursor: pointer;
 }
 
-.play {
+.play-icon {
   width: 18px;
   height: 18px;
   background: url("../../../../src/icons/play-icon.png") no-repeat center;
   background-size: contain;
 }
 
-.pause {
+.pause-icon {
   width: 18px;
   height: 18px;
   background: url("../../../../src/icons/pause-icon.png") no-repeat center;
