--- a/style/sass/partials/stages/_game-stages.scss
+++ b/style/sass/partials/stages/_game-stages.scss
@@ -3,14 +3,14 @@
 .play-icon {
   width: 18px;
   height: 18px;
-  background: url("../../../../src/icons/play-icon.png") no-repeat center;
+  background: url("src/icons/play-icon.png") no-repeat center;
   background-size: contain;
 }
 
 .pause-icon {
   width: 18px;
   height: 18px;
-  background: url("../../../../src/icons/pause-icon.png") no-repeat center;
+  background: url("src/icons/pause-icon.png") no-repeat center;
   background-size: contain;
 }
 
