--- a/style/style.css
+++ b/style/style.css
@@ -270,14 +270,14 @@ body {
 .play-icon {
   width: 18px;
   height: 18px;
-  background: url("src/icons/play-icon.png") no-repeat center;
+  background: url("../src/icons/play-icon.png") no-repeat center;
   background-size: contain;
 }
 
 .pause-icon {
   width: 18px;
   height: 18px;
-  background: url("src/icons/pause-icon.png") no-repeat center;
+  background: url("../src/icons/pause-icon.png") no-repeat center;
   background-size: contain;
 }
 
