--- a/style/sass/partials/components/_variants-list.scss
+++ b/style/sass/partials/components/_variants-list.scss
@@ -14,6 +14,10 @@
       border-bottom: none;
     }
 
+    &:hover {
+      background-color: $border;
+    }
+
     .variants-list__circle {
       width: 10px;
       height: 10px;
